--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=Poiret+One);
-@import '../../node_modules/susy/sass/susy';
-@import '../../node_modules/breakpoint-sass/stylesheets/_breakpoint.scss';
+@import url(https://fonts.googleapis.com/css?family=Poiret+One);
+@import "../../node_modules/susy/sass/susy";
+@import "../../node_modules/breakpoint-sass/stylesheets/_breakpoint.scss";
 
 $menu-breakpoint: (min-width: 0px) and (max-width: 850px);
 $footer-breakpoint: (min-width: 0px) and (max-width: 610px);
@@ -14,20 +14,21 @@ $susy: (
   container: 932px,
   container-position: center,
   columns: (1, 1.5, 1.5, 1.5),
-  gutters: .25,
+  gutters: 0.25,
   column-width: false,
   global-box-sizing: content-box,
   last-flow: to,
-  debug: (
-    image: hide,
-    color: rgba(#66f, .25),
-    output: background,
-    toggle: top right,
-  )
+  debug:
+    (
+      image: hide,
+      color: rgba(#66f, 0.25),
+      output: background,
+      toggle: top right
+    )
 );
 
 html {
-  background: url('../images/background4.png') no-repeat center center fixed;
+  background: url("../images/background4.png") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -35,7 +36,7 @@ html {
   color: white;
   margin: 0px;
   padding: 0px;
-  font-family: 'Poiret One', cursive;
+  font-family: "Poiret One", cursive;
   .azuca-site {
     .bold {
       font-weight: bold;
@@ -170,15 +171,15 @@ ul.sub-navigation {
   padding-bottom: 10px;
   @include nobreak;
   height: 411px;
-  background-image: url('../images/header/logo.png');
+  background-image: url("../images/header/logo.png");
   background-position: center;
   background-repeat: no-repeat;
   padding-bottom: 5px;
   @include breakpoint($header-breakpoint) {
     @include span(2);
-    background-image: url('../images/header/logo_small.png');
+    background-image: url("../images/header/logo_small.png");
     height: 188px;
-    margin-left:10px;
+    margin-left: 10px;
     text-align: left;
     background-position: left;
     clear: both;
@@ -205,23 +206,23 @@ ul.sub-navigation {
     }
     @include nobreak;
     .slideshow {
-        position: relative;
-        @include span(1 of 3 wide);
-        height: 100%;
-        padding: 0px;
-        margin: 0px;
+      position: relative;
+      @include span(1 of 3 wide);
+      height: 100%;
+      padding: 0px;
+      margin: 0px;
 
-        div {
-          position: absolute;
-          top: 0px;
-          left: 0px;
-          height: 100%;
-          width: 100%;
-          img {
-            width: 97%;
-            height: auto;
-          }
+      div {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        height: 100%;
+        width: 100%;
+        img {
+          width: 97%;
+          height: auto;
         }
+      }
     }
   }
 }
@@ -260,15 +261,15 @@ ul.sub-navigation {
         font-size: 15px;
         margin-top: 0px;
         span {
-            display: block;
-            padding-bottom: 5px;
+          display: block;
+          padding-bottom: 5px;
         }
       }
       @include breakpoint($menu-breakpoint) {
         margin-top: 0px;
         span {
-            display: block;
-            padding-bottom: 5px;
+          display: block;
+          padding-bottom: 5px;
         }
       }
       @include breakpoint($footer-breakpoint) {
@@ -294,15 +295,15 @@ ul.sub-navigation {
   @include breakpoint($menu-breakpoint) {
     margin-top: 0px;
   }
-  margin-bottom:5px;
+  margin-bottom: 5px;
   padding: 6px;
   font-size: 20px;
   text-align: center;
   .full {
-    @include span (2 of 2);
+    @include span(2 of 2);
   }
   .full-center {
-    @include span (2 of 2);
+    @include span(2 of 2);
     .item-wrapper {
       text-align: center;
     }
@@ -313,9 +314,9 @@ ul.sub-navigation {
     }
   }
   .item-wrapper.half {
-    @include span (1 of 2);
+    @include span(1 of 2);
     @include breakpoint($header-breakpoint) {
-      @include span (2 of 2);
+      @include span(2 of 2);
     }
   }
   .content-git-private-events {
@@ -356,8 +357,8 @@ ul.sub-navigation {
   }
   .content-valentines-landing {
     ul {
-        list-style-position: inside;
-        margin-left: -40px;
+      list-style-position: inside;
+      margin-left: -40px;
     }
   }
   .menu-wrapper {
